--- a/views/marketing_tags.haml
+++ b/views/marketing_tags.haml
@@ -1,6 +1,4 @@
-%p Gaming license acquisition in emerging markets.
-
-%p Significant experience with regulated industries in Emerging Markets. Experienced emerging markets distribution channel creation and management.
+%p Significant experience with regulated industries in Emerging Markets. Experienced emerging markets distribution channel creation and management. Gaming license acquisition in emerging markets.
 
 %p Duty Free license in Timor Leste for border areas, airport and city duty free.  
 
@@ -11,6 +9,6 @@
 %p  Capability to develop and execute distribution and telecom businesses across South East Asia. Founders have direct experience operating in Vietnam, Cambodia, Singapore, Sri Lanka, Timor Leste, Pakistan, India, Philippines
 
 %p 
-  The attached file summarizes our projects in Timor Leste for which are looking for financial partners. 
-  %a(href="attachments/Timor-Investment-v7-short.pdf")
-    Investment Summary
+  Download Timor investment
+  %a(href="summary") 
+    summary 
