--- a/content/pages/projects.haml
+++ b/content/pages/projects.haml
@@ -19,13 +19,13 @@ Summary: Projects
           Timor Leste has the only land border crossing in Indoneisa where we have a duty free license and a hotel license   
           %a(href="projects/batugade")
             (see images).
-          Our store in Batugade will open 2015  
+          Our store in Batugade opened in December 2016.  Sales are excellent and we need more products diversity. 
         %h4  Airport
         %p 
-          We plan to launch the Dili Airport duty free before Q1 2016.
+          We plan to launch the Dili Airport duty free before Q3 2016.
         %h4  Salele/Oecussi
         %p 
-          Salele will likely open Dec 2015.  Oecussi will launch Q1 2016.  This would represent all of the land border crossings with Indonesia and would be a significant achievement.
+          Salele will likely open June 2016.  Oecussi will launch Q2 2016.  This would represent all of the land border crossings with Indonesia and would be a significant achievement.
       .col-xs-4
         %h3
           Food Production
