--- a/content/pages/projects/batugade.haml
+++ b/content/pages/projects/batugade.haml
@@ -7,7 +7,7 @@ Summary: Batugade Duty Free
     .col-md-9
       %h1 Batugade Duty Free
       :markdown
-        We are presently building out a duty free shop at the land border crossing in Timor Leste with Indonsia.  This is the only land border crossing in Indonesia.
+        We are presently building out a duty free shop at the land border crossing in Timor Leste with Indonsia.  This is the only land border crossing in Indonesia.  The store opened Dec 2015 and products are selling extremely well.
       
       %h2 Shop Design
       %h3
