added async flag

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -18,8 +18,8 @@
             %small BVI Company registration: 1811240
 
 %script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
-%script(type="text/javascript" src="/bootstrap/dist/toolkit.js")
-%script(type="text/javascript" src="/javascripts/application.js")
+%script(type="text/javascript" async src="/bootstrap/dist/toolkit.js")
+%script(type="text/javascript" async src="/javascripts/application.js")
 / %script(type="text/javascript" src="http://yandex.st/highlightjs/7.3/highlight.min.js")
 /  :javascript
 /    hljs.initHighlightingOnLoad();
