update on async files

--- a/views/commonlayout.haml
+++ b/views/commonlayout.haml
@@ -4,7 +4,7 @@
   %meta(name="viewport" content="initial-scale=1, width=device-width")
   
   / - local_stylesheet_link_tag('local')
-  %link(href="/bootstrap/dist/toolkit-minimal.css" rel="stylesheet" media="screen")
+  %link(href="/bootstrap/dist/toolkit-minimal.css" async rel="stylesheet" media="screen")
   - if @description
     %meta(name="description" content=@description)
   - if @keywords
