--- a/views/footer.haml
+++ b/views/footer.haml
@@ -17,7 +17,7 @@
           %p
             %small BVI Company registration: 1811240
 
-%script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+%script(type="text/javascript" async src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
 %script(type="text/javascript" async src="/bootstrap/dist/toolkit.js")
 %script(type="text/javascript" async src="/javascripts/application.js")
 / %script(type="text/javascript" src="http://yandex.st/highlightjs/7.3/highlight.min.js")
