updates to remove download file

--- a/content/pages/summary.haml
+++ b/content/pages/summary.haml
@@ -12,10 +12,10 @@ Link text: Summary
         %h2
           %section.lucky1
             = haml :marketing_tags, :layout => false
-  .callout
-    .callout-content
-      %h2 Timor Investment Opportunity
-      = haml :timor_register, :layout => false
+  /.callout
+  /  .callout-content
+  /    %h2 Timor Investment Opportunity
+  /    = haml :timor_register, :layout => false
   .row
     = haml :keyprojects, :layout => false
   .row
