--- a/views/marketing_tags.haml
+++ b/views/marketing_tags.haml
@@ -8,7 +8,7 @@
 
 %p  Capability to develop and execute distribution and telecom businesses across South East Asia. Founders have direct experience operating in Vietnam, Cambodia, Singapore, Sri Lanka, Timor Leste, Pakistan, India, Philippines
 
-%p 
-  Download Timor investment
-  %a(href="summary") 
-    summary 
+/%p 
+/  Download Timor investment
+/  %a(href="summary") 
+/    summary 
