minor changes and link improvements

--- a/content/pages/contact.haml
+++ b/content/pages/contact.haml
@@ -31,7 +31,7 @@ Summary: Contact
       = haml :product_menu, :layout => false
   .row
     .col-md-8
-      %h1 Timor Contact
+      %h1 Timor Contacts
       :markdown
         #### Our Address:
   
@@ -42,6 +42,8 @@ Summary: Contact
         Warehouse
         Planta Kelapa
         Dili
+        
+        [Shops](http://www.seadutyfree.com/shops) 
         
         Batugade
         Customs Building
