--- a/content/pages/platforms.haml
+++ b/content/pages/platforms.haml
@@ -9,6 +9,8 @@ Summary: Product list
       :markdown
         A summary of the various products and solutions we deliver. 
 
+        #### Distrbution
+        We have significant capabiity in managing and implementing distribution systems in emerging markets.  We have built signiicant distribution system in Cambodia, Timor Leste, and  Phillippines.
         #### Technology
         We use [Mathematica](http://wolfram.com) and [Ruby](http://ruby-lang.org) for website and integrated performance reporting for most of our technology development.  Some of our small terminal projects use RaspberryPi devices for inexpensive terminal solutions.
         #### Terminals
