--- a/views/keyprojects.haml
+++ b/views/keyprojects.haml
@@ -7,7 +7,9 @@
     * Distribution Management
     * Reporting 
 .col-xs-3
-  %h2 Duty Free
+  %h2 
+    %a(href="/projects")
+      Duty Free
   :markdown
     * Duty Free license in Timor Leste
     * Management of 4 border crossings and airport/city duty free
