--- a/content/pages/projects.haml
+++ b/content/pages/projects.haml
@@ -16,27 +16,29 @@ Summary: Projects
           %a(href="projects/batugade")
             Batugade
         %p 
-          Timor Leste has the only land border crossing in Indoneisa where we have a duty free license and a hotel license   
+          Timor Leste has the only land border crossing in Indoneisa.  Currently  we have a duty free license and a hotel license for Batugade 
           %a(href="projects/batugade")
             (see images).
-          Our store in Batugade opened in December 2016.  Sales are excellent and we need more products diversity. 
+          Our store in Batugade opened in December 2015.  Sales are excellent and we need more products diversity.  Our online store is open and can be used to schedule pickup at the border.  However, given the cash based economy and limited internet penetration this does not see much use currently.
         %h4  Airport
         %p 
-          We plan to launch the Dili Airport duty free before Q3 2016.
+          We plan to launch the Presidente Nicolau Lobato International Airport (Dili) duty free before Q4 2016.  We anticipate to having stores in both the arrival and departure areas of the airport.
         %h4  Salele/Oecussi
         %p 
-          Salele will likely open June 2016.  Oecussi will launch Q2 2016.  This would represent all of the land border crossings with Indonesia and would be a significant achievement.
+          Salele will likely open October 2016.  Oecussi will launch Q1 2017.  This would represent all of the land border crossings with Indonesia and would be a significant achievement and revneue potential.
       .col-xs-4
         %h3
           Food Production
         %p 
-          Our plans include the production of local products including timor coffee and timor hot sauce.  
+          Our plans include the production of local products including Timor coffee and Timor Hot Sauce.  
         %img.img-responsive(data-action="zoom"  src="/attachments/hotsauce.png" alt='estorm logo')
       .col-xs-4
         %h3
-          Tobacco Production and Manufacturing
+          Tobacco Distribution,Production and Manufacturing
         %p 
-          We plan to use local tobacco to manufacture cigarettes for a population base of 1.3 milion of which more than 60% smoke.  We would use the profits from cigarette manufactuing to support other local product development.  Our models show that local production would result in a 50% cost improvement over imported products offering a significant cost advantage.
+          We plan to start distributing major brands in Timor Leste in Q1 2017.
+        %p 
+          Eventually we plan to use local tobacco to manufacture cigarettes for a population base of 1.3 milion of which more than 60% smoke.  We would use the profits from cigarette manufactuing to support other local product development.  Our models show that local production would result in a 50% cost improvement over imported products offering a significant cost advantage. This wold also allow us to create more jobs for Timor citizens.
         %img.img-responsive(data-action="zoom"  src="/attachments/libro.jpg" alt='estorm logo')
       .col-xs-4
         %h3 Laos
